fixed compatibility with Java 8